fixed some over spill on event deets page

--- a/TowerReactDotNet.client/src/assets/scss/components/EventDetails.scss
+++ b/TowerReactDotNet.client/src/assets/scss/components/EventDetails.scss
@@ -1,7 +1,6 @@
 .bg-card {
     backdrop-filter: blur(7px);
     background-color: #246c8e72;
-    width: 85vw;
     text-shadow: 1px 1px 2px black;
 }
 
